--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
-"dependencies": {
+{
+  "name": "iron-tactics-mp",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "dependencies": {
     "express": "^4.19.2",
     "socket.io": "^4.7.5"
-},
+  },
+  "scripts": {
+    "start": "node server.js"
+  }
+}
